fixed alignment of my nfts highlight

--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ body {
   width: min-content;
   opacity: 0;
   margin-left: 36.5em;
-  margin-top: -18em;
+  margin-top: -18.4em;
 }
 .nftees-highlight img {
   width: 2.6rem;
@@ -152,7 +152,7 @@ body {
   width: min-content;
   opacity: 0;
   margin-left: 41.1em;
-  margin-top: -3.2em;
+  margin-top: -2.9em;
 }
 .partners-highlight img {
   width: 13.5rem;
@@ -187,7 +187,7 @@ body {
 .twitter-highlight {
   width: min-content;
   margin-left: 52.3em;
-  margin-top: -2.1em;
+  margin-top: -2.0em;
   opacity: 0;
 }
 .twitter-highlight img {
